--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Postal Plebiscite">
+    <meta name="description" content="Same Sex Marriage Postal Plebiscite">
+    <meta name="description" content="Equal Marriage Postal Plebiscite">
+    <meta name="description" content="122 million dollar postal Plebiscite">
+    <meta name="description" content="122 million dollar Plebiscite">
+    <meta name="title" content="A better 122 million">
+    <meta name="title" content="A better $122000000">
+    <meta name="title" content="A better 122 million dollars">
     <meta name="author" content="">
 
     <title>A Better $122000000</title>
