--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="description" content="Equal Marriage Postal Plebiscite">
     <meta name="description" content="122 million dollar postal Plebiscite">
     <meta name="description" content="122 million dollar Plebiscite">
+    <meta name="description" content="A better 122 milllion">
+     <meta name="description" content="A better $122000000">
+    <meta name="description" content="A better 122 million dollars">
     <meta name="title" content="A better 122 million">
     <meta name="title" content="A better $122000000">
     <meta name="title" content="A better 122 million dollars">
