--- a/index.html
+++ b/index.html
@@ -6,39 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Postal Plebiscite">
-    <meta name="description" content="Same Sex Marriage Postal Plebiscite">
-    <meta name="description" content="Equal Marriage Postal Plebiscite">
-    <meta name="description" content="122 million dollar postal Plebiscite">
-    <meta name="description" content="122 million dollar Plebiscite">
-    <meta name="description" content="A better 122 milllion">
-    <meta name="description" content="A better $122000000">
-    <meta name="description" content="A better 122 million dollars">
-    <meta name="description" content="Same Sex Marriage Plebiscite">
-    <meta name="description" content="Turnbull Plebiscite">
-    <meta name="description" content="ABS Plebiscite">
-    <meta name="description" content="Plebiscite Australia">
-    <meta name="description" content="Same Sex Marriage">
+    <meta name="keywords" content="Postal Plebiscite,Same Sex Marriage Postal Plebiscite,
+   Equal Marriage Postal Plebiscite,122 million dollar postal Plebiscite,
+122 million dollar Plebiscite,A better 122 milllion,A better $122000000,A better 122 million dollars,Same Sex Marriage Plebiscite,Turnbull Plebiscite,ABS Plebiscite,Plebiscite Australia,Same Sex Marriage,Plebiscite,Plebiscite gay marriage,Plebiscite gay marriage australia,Gay Marriage Postal Plebiscite,Same Sex Marriage,Gay Marriage,Equal Marriage,Plebiscite cost,Postal Plebiscite Cost,Gay Plebiscite,A better 122 million,A better $122000000,A better 122 million dollars">
     
     <meta name="title" content="A better 122 million">
-    <meta name="title" content="A better $122000000">
-    <meta name="title" content="A better 122 million dollars">
-    <meta name="author" content="">
-    <!-- *** Snippet Box *** -->
-<table cellpadding="0" cellspacing="0" border="0">
-  <tr>
-    <td>
-<!--Use description meta tag, if non-empty, in place of snippet-->
-    <xsl:choose>
-      <xsl:when test="MT/@N='description' and MT/@V!=''">
-        <xsl:value-of select="MT[@N = 'description']/@V"/>
-      </xsl:when>
-      <xsl:otherwise>
-          <xsl:call-template name="reformat_keyword">
-            <xsl:with-param name="orig_string" select="S"/>
-          </xsl:call-template>
-      </xsl:otherwise>
-    </xsl:choose>
+    <meta name="description" content="A Postal Plebiscite is going to cost $122m, that money could be better spent; on virtually anything, find out what else $122m can get">
+    <meta name="author" content= "Jack Larkin">
 
     <title>A Better $122000000</title>
 
