--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "url": "http://www.http://abetter122million.me/",
+  "name": "A Better 122million",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "email": "abetter122million@gmail.com",
+    "contactType": "Contact"
+  }
+}
+    </script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
