--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 {
   "@context": "http://schema.org",
   "@type": "Organization",
-  "url": "http://www.http://abetter122million.me/",
+  "url": "http://www.abetter122million.me/",
   "name": "A Better 122million",
   "contactPoint": {
     "@type": "ContactPoint",
