--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   "name": "A Better 122million",
   "contactPoint": {
     "@type": "ContactPoint",
+    "url": "http://www.abetter122million.me/",
     "email": "abetter122million@gmail.com",
     "contactType": "Contact"
   }
