--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   "contactPoint": {
     "@type": "ContactPoint",
     "url": "http://www.abetter122million.me/",
-    "email": "abetter122million@gmail.com",
+    "email": "abetter122million@gmail.com",}
   }
 }
     </script>
