--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   }
 }
     </script>
-
+    <link rel="icon" href="1-310167.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,8 @@
     <meta name="title" content="A better 122 million">
     <meta name="description" content="A Postal Plebiscite is going to cost $122m, that money could be better spent; on virtually anything, find out what else $122m can get">
     <meta name="author" content= "Jack Larkin">
-
+    <meta name="og:title" content="A better 122 million">
+    <meta name="og:description" content="A Postal Plebiscite is going to cost $122m, that money could be better spent; on virtually anything, find out what else $122m can get">
     <title>A Better $122000000</title>
 
     <!-- Bootstrap Core CSS -->
