--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   }
 }
     </script>
-    <link rel="icon" href="1-310167.png">
+    <link rel="icon" href="10310167%20.jpg">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
