--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Postal Plebiscite,Same Sex Marriage Postal Plebiscite,
    Equal Marriage Postal Plebiscite,122 million dollar postal Plebiscite,
-122 million dollar Plebiscite,A better 122 milllion,A better $122000000,A better 122 million dollars,Same Sex Marriage Plebiscite,Turnbull Plebiscite,ABS Plebiscite,Plebiscite Australia,Same Sex Marriage,Plebiscite,Plebiscite gay marriage,Plebiscite gay marriage australia,Gay Marriage Postal Plebiscite,Same Sex Marriage,Gay Marriage,Equal Marriage,Plebiscite cost,Postal Plebiscite Cost,Gay Plebiscite,A better 122 million,A better $122000000,A better 122 million dollars">
+122 million dollar Plebiscite,A better 122 million,A better $122000000,A better 122 million dollars,Same Sex Marriage Plebiscite,Turnbull Plebiscite,ABS Plebiscite,Plebiscite Australia,Same Sex Marriage,Plebiscite,Plebiscite gay marriage,Plebiscite gay marriage australia,Gay Marriage Postal Plebiscite,Same Sex Marriage,Gay Marriage,Equal Marriage,Plebiscite cost,Postal Plebiscite Cost,Gay Plebiscite">
     
     <meta name="title" content="A better 122 million">
     <meta name="description" content="A Postal Plebiscite is going to cost $122m, that money could be better spent; on virtually anything, find out what else $122m can get">
@@ -46,7 +46,7 @@
 
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <script src = "js/papaparse.js"></script>
+    <script src = "js/papaparse.min.js"></script>
     
 
     <!-- Custom Fonts -->
