--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <script src = "js/papaparse.min.js"></script>
+    <script src = "papaparse.min.js"></script>
     
 
     <!-- Custom Fonts -->
