--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <script src = "js/papaparse.js"></script>
+    <script src = "js/papaparse.min.js"></script>
     
 
     <!-- Custom Fonts -->
@@ -195,8 +195,8 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                                 <h4>
                                     <strong>Warren Entsch</strong>
                                 </h4>
-                                <i class="fa fa-phone fa-fw"></i>(02) 6277 4803<br>
-                                <i class="fa fa-phone fa-fw"></i> (07) 4051 2220
+                                <i class="fa fa-phone fa-fw"></i><font color ="white"> (02) 6277 4803</font><br>
+                                <i class="fa fa-phone fa-fw"></i><font color ="white"> (07) 4051 2220</font>
                                 <br><br>
                                 <div id = "warren" class="btn btn-light"></div>
                             </div>
@@ -210,8 +210,8 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                                     <h4>
                                     <strong>Trevor Evans</strong>
                                 </h4>
-                                <i class="fa fa-phone fa-fw"></i> (02) 6277 2008<br>
-                                <i class="fa fa-phone fa-fw"></i>(07) 3252 9222
+                                <i class="fa fa-phone fa-fw"></i><font color ="white"> (02) 6277 2008</font><br>
+                                <i class="fa fa-phone fa-fw"></i><font color ="white"> (07) 3252 9222</font>
                                 <br><br>
                                 <div id = "trevor" class="btn btn-light"></div>
                             </div>
@@ -224,8 +224,8 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                                     <h4>
                                     <strong>Tim Wilson</strong>
                                 </h4>
-                            <i class="fa fa-phone fa-fw"></i> (02) 6277 2392<br>
-                            <i class="fa fa-phone fa-fw"></i>(03) 9557 4644
+                            <i class="fa fa-phone fa-fw"></i><font color ="white"> (02) 6277 2392</font><br>
+                            <i class="fa fa-phone fa-fw"></i><font color ="white"> (03) 9557 4644</font>
                                 <br><br>
                                 <div id = "tim" class="btn btn-light"></div>
                             </div>
@@ -237,8 +237,8 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                                     <h4>
                                     <strong>Trent Zimmerman</strong>
                                 </h4>
-                            <i class="fa fa-phone fa-fw"></i> (02) 6277 4744<br>
-                            <i class="fa fa-phone fa-fw"></i>(02) 9929 9822
+                            <i class="fa fa-phone fa-fw"></i><font color ="white"> (02) 6277 4744</font><br>
+                            <i class="fa fa-phone fa-fw"></i><font color ="white">(02) 9929 9822</font>
                                 <br><br>
                                 <div id = "trent" class="btn btn-light"></div>
                         </div>
@@ -269,7 +269,7 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                     <h4><strong>ABetter122million</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com" color = "blue">abetter122million@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">abetter122million@gmail.com</a>
                         </li>
                     </ul>
                     <br>
@@ -282,7 +282,7 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.mjs"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
