--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
-    <script src = "js/papaparse.min.js"></script>
+    <script src = "js/papaparse.js"></script>
     
 
     <!-- Custom Fonts -->
