--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <div class = "hidden-xs">
-                                <img class="img-circle" src="https://cdn.liberal.org.au/members/EntschWarren.png" width = "160px">
+                                <img class="img-circle" src="EntschWarren.png" width = "160px">
                                 </div>
                                 <h4>
                                     <strong>Warren Entsch</strong>
@@ -132,7 +132,7 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                             
                             <div class="service-item">
                                 <div class = "hidden-xs">
-                                <img class="img-circle" src="https://cdn.liberal.org.au/members/EvansTrevor.png" width = "160px">
+                                <img class="img-circle" src="EvansTrevor.png" width = "160px">
                                 </div>
                                     <h4>
                                     <strong>Trevor Evans</strong>
@@ -146,7 +146,7 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                         <div class="col-md-3 col-sm-6">
                         <div class="service-item">
                                 <div class = "hidden-xs">
-                                <img class="img-circle" src="https://cdn.liberal.org.au/members/WilsonTim.png" width = "160px">
+                                <img class="img-circle" src="WilsonTim.png" width = "160px">
                                 </div>
                                     <h4>
                                     <strong>Tim Wilson</strong>
@@ -159,7 +159,7 @@ $('#test').text(list[Math.floor(Math.random() * list.length)]);
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class = "hidden-xs">
-                                <img class="img-circle" src="https://cdn.liberal.org.au/members/ZimmermanTrent.png" width = "160px">
+                                <img class="img-circle" src="ZimmermanTrent.png" width = "160px">
                                 </div>
                                     <h4>
                                     <strong>Trent Zimmerman</strong>
