--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@ setInterval(function(){$("#test").text(list[Math.floor(Math.random()*list.length
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                <script type="text/javascript" src="https://www.formlets.com/static/js/iframeResizer.min.js"></script>
-<iframe id="formlets-iframe" src="https://www.formlets.com/forms/QfPdmvcvISaWID1m/?iframe=true" frameborder="0" width="100%"></iframe>
-<script type="text/javascript" src="https://www.formlets.com/static/js/iframe.js"></script> 
+ <script type="text/javascript" src="https://www.formlets.com/static/js/iframeResizer.min.js"></script><iframe id="formlets-iframe" src="https://www.formlets.com/forms/QfPdmvcvISaWID1m/?iframe=true" frameborder="0" width="100%"></iframe><script type="text/javascript" src="https://www.formlets.com/static/js/iframe.js"></script> 
 </div></div></div>
     </section>
     <section id="form">
