--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ setInterval(function(){$("#test").text(list[Math.floor(Math.random()*list.length
                     <h4><strong>ABetter122million</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">abetter122million@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:abetter122million@gmail.com">abetter122million@gmail.com</a>
                         </li>
                     </ul>
                     <br>
