--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-104399230-1', 'auto');
   ga('send', 'pageview');
+  ga('set', 'userId', {{USER_ID}}); 
 </script>  
 <script type="application/ld+json">
 {
