--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-104399230-1', 'auto');
-  ga('send', 'pageview');
-  ga('set', 'abetter122million', {{USER_ID}}); 
+  ga('send', 'pageview')   
 </script>  
 <script type="application/ld+json">
 {
