--- a/index.html
+++ b/index.html
@@ -123,8 +123,13 @@ z-index: 111;
     </script>
     <script>
         var map = new mapboxgl.Map({
-  container: 'map2323', // container id
-  style: 'mapbox://styles/jackgordonlarkin/ck316rp6m0pw01cpe0di7yp2d' // replace this with your style URL
+            container: 'map2323', // container id
+            style: 'mapbox://styles/jackgordonlarkin/ck316rp6m0pw01cpe0di7yp2d', // replace this with your style URL
+            maxZoom: 14,
+            minZoom: 3,
+            zoom:6,
+            center:[133.7751, -25.2744]
+            
             
 });
 map.addControl(new mapboxgl.GeolocateControl({
@@ -149,10 +154,10 @@ var states = map.queryRenderedFeatures(e.point, {
     layers: ['TPP']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.TPP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Coalition</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })}
 if (layerId=="ck317ae4d0hjn1cmc1fljngu3"){
@@ -161,10 +166,10 @@ var states = map.queryRenderedFeatures(e0.point, {
     layers: ['ALP']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.ALP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for Labor</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })}
 if (layerId=="ck3178d2w0bs91cpp8i2uoigg"){
@@ -173,10 +178,10 @@ var states = map.queryRenderedFeatures(e1.point, {
     layers: ['LNP']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.LNP + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Coalition</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })}
 if (layerId=="ck317iz4m0hrq1cmc8jd5zl9x"){    
@@ -185,10 +190,10 @@ var states = map.queryRenderedFeatures(e2.point, {
     layers: ['GRNSA1']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.GRN + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Greens</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })
 }
@@ -198,10 +203,10 @@ var states = map.queryRenderedFeatures(e3.point, {
     layers: ['PUP']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h2><strong>'+ states[0].properties.UAPP + '% </strong></h2><h3><strong> of ' + states[0].properties.n_votes + '</strong> primary votes cast in this area of '+ states[0].properties.SA2 + ' in favour of the UAP</h3>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with peoplef</p>';
   }
 })       
 }
@@ -211,10 +216,10 @@ var states = map.queryRenderedFeatures(e4.point, {
     layers: ['OTHSA1']
   });
   var votes = parseFloat(parseFloat(states[0].properties["IND/OTH"])+parseFloat(states[0].properties["KAP/CA"]),2)   
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+ votes + '% </b></strong> <i style="font-weight:50">of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for Other candidates</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })   }
 if(layerId=="ck317gewz1o2s1cqi2p62ll8x"){
@@ -223,10 +228,10 @@ var states = map.queryRenderedFeatures(e9.point, {
     layers: ['ON']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
       document.getElementById('pd').innerHTML = '<p>We estimate that in '+states[0].properties.div_nm+ ':</p><h2><strong>'+ states[0].properties.ON + '% </strong></h2><h3><strong> of ' + states[0].properties.n_votes + '</strong> primary votes cast in this area of '+ states[0].properties.SA2 + ' in favour of One Nation</h3>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })
 }
@@ -253,10 +258,10 @@ var states = map.queryRenderedFeatures(e.point, {
     layers: ['TPP']
   });
 
-  if (states.length > 0) {
+  if (states.length > 0 && parseInt(states[0].properties.n_votes)>0) {
        document.getElementById('pd').innerHTML = '<p>We estimate that on a TPP basis in '+states[0].properties.div_nm+ ':</p><h3><strong><b>'+  states[0].properties.TPP + '% </b></strong> <i style="font-weight:50"> of ' + states[0].properties.n_votes + '</i></h3><h4>votes in this area of '+ states[0].properties.SA2 + ' were for the Coalition</h4>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Hover somewhere</p>';
+    document.getElementById('pd').innerHTML = '<p>Hover somewhere with people</p>';
   }
 })
 
