--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-139041146-2');
+gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
+    ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
 </script>
    
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
