--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ var states = map.queryRenderedFeatures(e.point, {
                     <h4><strong>HowdidweVote?</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:jackgordonlarkin@gmail.com">jackgordonlarkin@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:howdidwevote@gmail.com">howdidwevote@gmail.com</a>
                         </li>
                     </ul>
                     <br>
