--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@ var imagesArray = [
     "bg4.png",
     "bg5.png",
     "bg6.png",
-    "bg7.png"
+    "bg7.png",
+    "bg8.png"
     
 ];
 
 function changeBackground(){
-    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*7)] +")");      
+    $("#top").css("background-image" , "url("+ imagesArray[parseInt(Math.random()*8)] +")");      
 }
 
 
